Fix overflow in work page

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -360,7 +360,7 @@ img {
   border-bottom: 1px solid white;
   width: 100vw;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow: scroll hidden;
 }
 .work .projects .project {
   min-width: 60vw;
