--- a/portfolio/scss/_work.scss
+++ b/portfolio/scss/_work.scss
@@ -25,7 +25,8 @@
     border-bottom: 1px solid white;
     width: 100vw;
     white-space: nowrap;
-    overflow-x: scroll;
+    // overflow-x: scroll;
+    overflow: scroll hidden;
 
     .project {
       min-width: 60vw;
